--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,11 @@ img{
     }
   }
    @media (max-width: 767px){
+
+    #mountains{
+      background-image: url("/images/mobile-mountains.png");
+    }
+
     .custom-popup {
       width: 80%;
     }
