--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,21 @@ img{
     background-position: center;
   }
 
+.banner-btn{
+    background: #fff;
+    border: none;
+    color: #376875;
+    padding: 7px 30px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: lighter;
+    cursor: pointer;
+    border-radius: 5px;
+    text-decoration: none;
+    z-index: 9999;
+    margin: 50px auto 0;
+    width: 200px;
+}
   #mountains {
     width: 100%;
     height: 100%;
